# cgp2d

./: CMakeLists.txt  ideas.hxx
examples/python/: hist.py  quick_start.py
include/cgp2d/: cgp2d.hxx  cgp2d_python.hxx  macros.hxx  tgrid.hxx
include/cgp2d/cells/: cell_base.hxx
include/cgp2d/image_processing/: histogram
src/python/: CMakeLists.txt
src/python/cgp2d/: CMakeLists.txt  __init__.py  globalseg.py  py_cell2.cxx  py_cell2vec.cxx  py_cell_visitor.hxx  py_cgp2d.cxx  py_main.cxx
src/python/cgp2d/cells/: py_cell0.cxx  py_cell0vec.cxx  py_cell1.cxx  py_cell1vec.cxx  py_cell2.cxx  py_cell2vec.cxx  py_cell_visitor.hxx
src/python/cgp2d/image_processing/: py_histogram.cxx
src/python/cgp2d/misc/: py_segcompare.cxx
